--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:weightSum="5"
+    android:background="#fff"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context=".ui.activity.LoginActivity">
-    <LinearLayout
-        android:id="@+id/layout_login"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="vertical"
+
+    <ImageView
+        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:background="#fff"
+        android:scaleType="fitXY"
+        android:src="@drawable/image_title"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:gravity="bottom"
+        >
         <Button
             android:id="@+id/button_loginGg"
-            android:text="LOGIN GOOGLE"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_btn_google"
+            android:layout_marginBottom="30dp"
+            android:layout_marginHorizontal="20dp"
+            android:drawableStart="@drawable/ic_google"
+            android:text="@string/login_google"
+            android:textAllCaps="false"
+            android:textColor="@color/text_color_white"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:paddingVertical="20dp"
+            android:paddingStart="20dp"
+            />
+
         <Button
             android:id="@+id/button_loginFb"
-            android:text="LOGIN FACEBOOK"
+            android:background="@drawable/background_btn_facebook"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginHorizontal="20dp"
+            android:drawableStart="@drawable/ic_facebook"
+            android:paddingStart="20dp"
+            android:textAllCaps="false"
+            android:paddingVertical="20dp"
+            android:textColor="@color/text_color_white"
+            android:text="@string/login_facebook"
+            android:textSize="20sp"
+            android:gravity="center"
+            />
+
         <Button
             android:id="@+id/button_loginPhone"
-            android:text="LOGIN PHONE"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:text="LOGIN PHONE"
+            android:textColor="@color/text_color_white"
+            />
     </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
