--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,10 @@
             name="viewmodel"
             type="com.baokiin.mangatoon.ui.home.HomeViewModel" />
     </data>
-
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -20,9 +23,9 @@
           android:id="@+id/textView4"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
-          android:layout_marginTop="66dp"
-          android:text="TextView"
+          android:layout_marginTop="50dp"
           android:gravity="center"
+          android:text="TextView"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />
@@ -41,6 +44,7 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
       <androidx.cardview.widget.CardView
           android:id="@+id/cardViewTitle"
           android:layout_width="0dp"
@@ -51,61 +55,53 @@
           app:cardCornerRadius="20dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/btnSearch"
-          >
-
+          app:layout_constraintTop_toBottomOf="@+id/btnSearch">
 
 
           <androidx.viewpager2.widget.ViewPager2
               android:id="@+id/viewPagerTitle"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              />
+              android:layout_height="match_parent" />
+
           <com.google.android.material.tabs.TabLayout
               android:id="@+id/tabLayoutFragmentHome"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom"
               app:tabBackground="@drawable/tab_selection"
-              app:tabGravity="center"
-              >
-          </com.google.android.material.tabs.TabLayout>
+              app:tabGravity="center"></com.google.android.material.tabs.TabLayout>
       </androidx.cardview.widget.CardView>
 
+      <include
+          android:id="@+id/layoutPopulatio"
+          layout="@layout/layout_popular_home"
 
-      <TextView
-          android:id="@+id/textView6"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="30dp"
-          android:layout_marginTop="30dp"
-          android:text="Exclusive Offer"
-          android:textColor="#000"
-          android:textSize="20sp"
-          android:textStyle="bold"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/cardViewTitle" />
-
-      <TextView
-          android:id="@+id/textView7"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="30dp"
-          android:text="See all"
-          android:textStyle="bold"
-          android:textColor="@color/green_color"
-          app:layout_constraintEnd_toEndOf="@+id/cardViewTitle"
-          app:layout_constraintTop_toBottomOf="@+id/cardViewTitle" />
-
-      <androidx.recyclerview.widget.RecyclerView
-          android:id="@+id/recycleViewPopulation"
           android:layout_width="0dp"
-          android:layout_height="200dp"
-          android:layout_marginStart="30dp"
-          android:layout_marginTop="20dp"
-          android:layout_marginEnd="30dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="40dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/textView6" />
+          app:layout_constraintTop_toBottomOf="@+id/cardViewTitle" />
+
+      <include
+          android:id="@+id/layoutGener"
+          layout="@layout/layout_genre"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="40dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/layoutPopulatio" />
+
+      <include
+          android:id="@+id/layoutManhua"
+          layout="@layout/layout_manhua_home"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="40dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/layoutGener" />
   </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
