--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,12 +2,27 @@
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewmodel"
             type="com.baokiin.mangatoon.ui.home.HomeViewModel" />
+        <variable
+            name="adapterRecommended"
+            type="com.baokiin.mangatoon.ui.adapter.ItemRecommendedAdapter" />
+        <variable
+            name="adapterPopular"
+            type="com.baokiin.mangatoon.ui.adapter.ItemMangaAdapter"/>
+        <variable
+            name="adapteManhua"
+            type="com.baokiin.mangatoon.ui.adapter.ItemMangaAdapter"/>
+        <variable
+            name="adapterManhwa"
+            type="com.baokiin.mangatoon.ui.adapter.ItemMangaAdapter"/>
+        <variable
+            name="adapterGener"
+            type="com.baokiin.mangatoon.ui.adapter.ItemGenreAdapter" />
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -19,13 +34,13 @@
       android:background="@color/background_color_white"
       >
 
-      <TextView
+      <ImageView
           android:id="@+id/textView4"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_marginTop="50dp"
+          android:layout_width="100dp"
+          android:layout_height="100dp"
+          android:layout_marginTop="20dp"
           android:gravity="center"
-          android:text="TextView"
+          android:src="@drawable/logo"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />
@@ -35,15 +50,17 @@
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="30dp"
-          android:layout_marginTop="30dp"
+          android:layout_marginTop="40dp"
           android:layout_marginEnd="30dp"
           android:background="@drawable/background_btn_search"
           android:paddingVertical="15dp"
           android:paddingStart="20dp"
           android:text="Search"
+          android:drawableStart="@drawable/ic_search"
+          android:drawablePadding="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/textView4" />
+          app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
       <androidx.cardview.widget.CardView
           android:id="@+id/cardViewTitle"
@@ -60,8 +77,25 @@
 
           <androidx.viewpager2.widget.ViewPager2
               android:id="@+id/viewPagerTitle"
+              android:tabLayoutId="@{tabLayoutFragmentHome}"
+              android:adapter="@{adapterRecommended}"
               android:layout_width="match_parent"
               android:layout_height="match_parent" />
+          <com.facebook.shimmer.ShimmerFrameLayout
+              android:id="@+id/contentShimmerRecommended"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              app:shimmer_duration="800"
+
+              >
+                  <LinearLayout
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical">
+                      <include layout="@layout/templace_item_commended"/>
+                  </LinearLayout>
+          </com.facebook.shimmer.ShimmerFrameLayout>
+
 
           <com.google.android.material.tabs.TabLayout
               android:id="@+id/tabLayoutFragmentHome"
@@ -69,13 +103,12 @@
               android:layout_height="wrap_content"
               android:layout_gravity="bottom"
               app:tabBackground="@drawable/tab_selection"
-              app:tabGravity="center"></com.google.android.material.tabs.TabLayout>
+              app:tabGravity="center"/>
       </androidx.cardview.widget.CardView>
-
       <include
-          android:id="@+id/layoutPopulatio"
+          android:id="@+id/layoutPopular"
           layout="@layout/layout_popular_home"
-
+          bind:adapterPopular="@{adapterPopular}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
@@ -86,15 +119,17 @@
       <include
           android:id="@+id/layoutGener"
           layout="@layout/layout_genre"
+          bind:adapterGener="@{adapterGener}"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@+id/layoutPopulatio" />
+          app:layout_constraintTop_toBottomOf="@+id/layoutPopular" />
 
       <include
           android:id="@+id/layoutManhua"
+          bind:adapterManhua="@{adapteManhua}"
           layout="@layout/layout_manhua_home"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -102,6 +137,29 @@
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/layoutGener" />
+      <include android:id="@+id/layoutManhwa"
+          layout="@layout/layout_manhwa_home"
+          bind:adapterManhwa="@{adapterManhwa}"
+          android:layout_width="0dp"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="40dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/layoutManhua"
+          />
+
+      <TextView
+          android:id="@+id/textView10"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="MangaToon"
+          android:textColor="#000"
+          android:textStyle="bold"
+          android:textSize="25sp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
