--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -16,7 +16,7 @@
             android:id="@+id/imgRecommended"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@drawable/image_title"
+            android:profileImage="@{data.thumb}"
             android:scaleType="fitXY" />
         <TextView
             android:layout_width="wrap_content"
