--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,6 +56,8 @@
           android:paddingVertical="15dp"
           android:paddingStart="20dp"
           android:text="Search"
+          android:textColor="#7C7C7C"
+          android:fontFamily="@font/gilroy_bold"
           android:drawableStart="@drawable/ic_search"
           android:drawablePadding="10dp"
           app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +94,8 @@
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
-                      <include layout="@layout/templace_item_commended"/>
+
+                      <include layout="@layout/templace_item_commended" />
                   </LinearLayout>
           </com.facebook.shimmer.ShimmerFrameLayout>
 
@@ -153,9 +156,10 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="MangaToon"
+          android:fontFamily="@font/gilroy_bold"
           android:textColor="#000"
-          android:textStyle="bold"
           android:textSize="25sp"
+          
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView4" />
