--- a/app/src/main/res/layout/item_manga.xml
+++ b/app/src/main/res/layout/item_manga.xml
@@ -42,10 +42,11 @@
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:text="@{data.title}"
+                android:fontFamily="@font/gilroy_bold"
                 android:lines="1"
+                android:text="@{data.title}"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -56,9 +57,11 @@
                 android:id="@+id/txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="price chapter"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:fontFamily="@font/gilroy_medium"
+                android:text="chap, price"
+                android:textColor="#7C7C7C"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtName" />
 
@@ -66,29 +69,30 @@
                 android:id="@+id/txtPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/gilroy_bold"
                 android:text="@{data.upload_on != null ? data.upload_on.substring(7,8): data.updated_on.substring(0,1)}"
                 android:textColor="#000"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/txtBuy"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txt" />
+                app:layout_constraintTop_toTopOf="@+id/txtBuy" />
 
 
             <TextView
                 android:id="@+id/txtBuy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/background_button_buy"
                 android:drawableStart="@drawable/buy"
                 android:padding="10dp"
-                app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
-                app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txt" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
