--- a/app/src/main/res/layout/item_recommended.xml
+++ b/app/src/main/res/layout/item_recommended.xml
@@ -22,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{data.title}"
+            android:fontFamily="@font/aclonica"
             android:layout_gravity="bottom|end"
             android:gravity="center"
             android:layout_marginEnd="10dp"
