--- a/app/src/main/res/layout/layout_manhua_home.xml
+++ b/app/src/main/res/layout/layout_manhua_home.xml
@@ -20,22 +20,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="30dp"
+            android:fontFamily="@font/gilroy_bold"
             android:text="Manhua"
             android:textColor="#000"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardViewTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="30dp"
+            android:fontFamily="@font/gilroy_bold"
             android:text="See all"
             android:textColor="@color/green_color"
-            android:textStyle="bold"
+            android:textSize="19sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <FrameLayout
