--- a/app/src/main/res/layout/item_genre_home.xml
+++ b/app/src/main/res/layout/item_genre_home.xml
@@ -11,8 +11,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewItemGenre"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_width="300dp"
+        android:layout_height="100dp"
         android:layout_margin="10dp"
         app:cardCornerRadius="20dp">
 
