--- a/app/src/main/res/layout/item_detail_genre.xml
+++ b/app/src/main/res/layout/item_detail_genre.xml
@@ -12,7 +12,7 @@
 
     <FrameLayout
         android:background="@drawable/bg_item_manga"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         android:layout_margin="10dp"
