--- a/app/src/main/res/layout/layout_manhua_home.xml
+++ b/app/src/main/res/layout/layout_manhua_home.xml
@@ -53,6 +53,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adapter="@{adapterManhua}"
+                android:spanCountRecycle="@{1}"
+
                 />
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/contentShimmerManhua"
