--- a/app/src/main/res/layout/layout_manhwa_home.xml
+++ b/app/src/main/res/layout/layout_manhwa_home.xml
@@ -52,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:adapter="@{adapterManhwa}"
+                android:spanCountRecycle="@{1}"
                 />
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:id="@+id/contentShimmerManhwa"
