--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -8,11 +8,16 @@
         <variable
             name="viewmodel"
             type="com.baokiin.mangatoon.ui.detail.DetailViewModel" />
+        <variable
+            name="adapter"
+            type="com.baokiin.mangatoon.ui.adapter.ViewPageAdapter" />
     </data>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
         android:orientation="vertical"
         android:background="#fff"
         android:weightSum="9"
@@ -21,6 +26,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4">
+
+
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -38,8 +46,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginTop="20dp"
-                    android:drawableStart="@drawable/ic_back"
+                    android:layout_marginTop="30dp"
+                    android:drawableStart="@drawable/ic_back_white"
                     android:gravity="start"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -48,7 +56,7 @@
                     android:id="@+id/btnSearch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="30dp"
                     android:layout_marginEnd="20dp"
                     android:drawableEnd="@drawable/ic_search"
                     android:gravity="end"
@@ -60,20 +68,52 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:layout_marginBottom="40dp"
-                    android:text="@{viewmodel.data.title}"
-                    android:textSize="20sp"
-                    android:textColor="#fff"
+                    android:layout_marginBottom="10dp"
+                    android:maxWidth="300dp"
+                    android:background="@drawable/background_name_manga"
                     android:fontFamily="@font/gilroy_bold"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:paddingHorizontal="10dp"
+                    android:text="@{viewmodel.data.title}"
+                    android:textColor="#fff"
+                    android:textSize="30sp"
+                    app:layout_constraintBottom_toTopOf="@+id/tabLayoutDetailFragment"
                     app:layout_constraintStart_toStartOf="parent" />
 
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tabLayoutDetailFragment"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Monday" />
+
+                    <com.google.android.material.tabs.TabItem
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Tuesday" />
+
+
+                </com.google.android.material.tabs.TabLayout>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </FrameLayout>
 
+        </FrameLayout>
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/viewPagerDetailFragment"
+            android:layout_width="match_parent"
+            android:layout_weight="5"
+            android:layout_height="0dp"
+            android:tabLayoutId="@{tabLayoutDetailFragment}"
+            android:adapterDetail="@{adapter}"
+            />
 
     </LinearLayout>
 </layout>
