--- a/app/src/main/res/layout/item_manga.xml
+++ b/app/src/main/res/layout/item_manga.xml
@@ -42,13 +42,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="10dp"
+                android:maxWidth="150dp"
                 android:fontFamily="@font/gilroy_bold"
                 android:lines="1"
                 android:text="@{data.title}"
                 android:textColor="#000"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imgPopular" />
 
