--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -16,16 +16,21 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="10dp"
-            android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/button2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical"
+           >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -46,10 +51,11 @@
                 android:drawableStart="@drawable/ic_account"
                 android:layout_marginStart="20dp"
                 />
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:orientation="horizontal"
                 android:layout_marginHorizontal="20dp"
                 >
                 <TextView
@@ -57,7 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="25sp"
-                    android:lines="4"
+                    android:maxLines="4"
                     android:text="@{viewmodel.data.synopsis}"
                     />
                 <TextView
@@ -67,10 +73,9 @@
                     android:text="...more"
                     android:textColor="@color/green_color"
                     android:textSize="25sp"
-                    android:layout_gravity="end|bottom"
                     />
 
-            </FrameLayout>
+            </LinearLayout>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -78,7 +83,7 @@
                 android:adapter="@{adapter}"
                 />
         </LinearLayout>
-
+        </androidx.core.widget.NestedScrollView>
         <Button
             android:id="@+id/button2"
             android:layout_width="0dp"
